# aoc2022

./: pyproject.toml
src/: utils.py
src/day01/: day01.py
src/day02/: day02.py
src/day03/: day03.py
src/day04/: day04.py
src/day05/: day05.py  input1.txt
src/day06/: day06.py
src/day07/: day07.py
src/day08/: day08.py
src/day09/: day09.py
src/day10/: script.py
src/day11/: script.py
src/day12/: script.py
src/day13/: script.py
src/day15/: input0.txt  script.py
src/day20/: script.py
