[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Jon Gaul <jgaul3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
